Boton Principal pulsas y sale logcat

--- a/DosActividades/app/src/main/res/layout/activity_main.xml
+++ b/DosActividades/app/src/main/res/layout/activity_main.xml
@@ -10,4 +10,19 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.soez.dosactividades.MainActivity">
 
+    <Button
+        android:text="ENTER"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/botonPrincipal" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/botonPrincipal"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="36dp"
+        android:id="@+id/MuestraResultado" />
 </RelativeLayout>
