Pulsas boton y te devuelve a la actividad principal con el resultado

--- a/DosActividades/app/src/main/res/layout/activity_main2.xml
+++ b/DosActividades/app/src/main/res/layout/activity_main2.xml
@@ -18,7 +18,8 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="140dp"
-        android:id="@+id/numero1" />
+        android:id="@+id/numero1"
+        android:text="2" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -27,7 +28,8 @@
         android:ems="10"
         android:layout_centerVertical="true"
         android:layout_alignEnd="@+id/numero1"
-        android:id="@+id/numero2" />
+        android:id="@+id/numero2"
+        android:text="2" />
 
     <TextView
         android:text="+"
