--- a/TresActividades/app/src/main/res/layout/activity_main2.xml
+++ b/TresActividades/app/src/main/res/layout/activity_main2.xml
@@ -8,7 +8,70 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/orange"
+    android:background="@drawable/background2"
     tools:context="com.example.soez.tresactividades.Main2Activity">
 
+    <TextView
+        android:text="OSO"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/respuesta1"
+        android:onClick="onClick"
+        android:clickable="true"
+        android:textSize="25sp"
+        android:layout_marginTop="31dp"
+        android:textColor="@color/orange"
+        android:layout_below="@+id/pregunta"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:text="ELEFANTE"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/respuesta3"
+        android:onClick="onClick"
+        android:clickable="true"
+        android:textSize="25sp"
+        android:layout_marginTop="12dp"
+        android:textColor="@color/orange"
+        android:layout_below="@+id/respuesta2"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:text="LEON"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/respuesta2"
+        android:onClick="onClick"
+        android:clickable="true"
+        android:textSize="25sp"
+        android:layout_marginTop="13dp"
+        android:textColor="@color/orange"
+        android:layout_below="@+id/respuesta1"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:text="TIBURON"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/respuesta4"
+        android:onClick="onClick"
+        android:clickable="true"
+        android:textSize="25sp"
+        android:layout_marginTop="14dp"
+        android:textColor="@color/orange"
+        android:layout_below="@+id/respuesta3"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:text="¿QUE ANIMAL SERIAS?"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="86dp"
+        android:id="@+id/pregunta"
+        android:textSize="30sp"
+        android:fontFamily="sans-serif"
+        android:textColor="@android:color/background_light"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
