--- a/TresActividades/app/src/main/res/layout/activity_main3.xml
+++ b/TresActividades/app/src/main/res/layout/activity_main3.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/red"
+    android:background="@drawable/background3"
     tools:context="com.example.soez.tresactividades.Main3Activity">
 
 </RelativeLayout>
