--- a/TresActividades/app/src/main/res/values/colors.xml
+++ b/TresActividades/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#c2c2c2</color>
-    <color name="colorPrimaryDark">#9b9b9b</color>
+    <color name="colorPrimary">#00b7ff</color>
+    <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#ff4081</color>
 </resources>
